# vsc_nmpc_uav_target_tracking

./: CMakeLists.txt  README.md  package.xml
cfg/: et_img_moments_nmpc_parameters.yaml
config/: et_img_moments_nmpc_parameters.yaml  ibvs_img_moments.yaml  ibvs_nmpc_gains.yaml  nmpc_img_moments_parameters.yaml  nmpc_parameters.yaml
include/rrt_planner/: rrt_planner.h
include/vsc_nmpc_uav_target_tracking/: Controller_old.hpp  DynamicsCalculator.hpp  NMPCController.hpp  NMPCProblem.hpp  ROSListener.hpp  ROSPublisher.hpp  VelocityTransformer.hpp
launch/: event_triggered_img_mom_nmpc.launch  test.launch
launch/et_ibvs_nmpc/: et_track_ibvs_nmpc.launch  track_ibvs_nmpc.launch
launch/et_img_moments_nmpc/: event_triggered_img_mom_nmpc.launch  event_triggered_img_mom_nmpc_no_tracker.launch  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker_with_bfs.launch  event_triggered_nmpc_img_moments_coast_tracking_with_bfs.launch
launch/img_moments_nmpc/: ibvs_img_moments_coast_tracking.launch  nmpc_img_moments_coast_tracking.launch  nmpc_img_moments_coast_tracking_with_cbf.launch
msg/: FlightData.msg  rec.msg
src/: .mpc.cpp.svq  .mpc.cpp.svr  .mpc.cpp.svs  .mpc.cpp.svt  .mpc.cpp.svu  .mpc.cpp.svv  .mpc.cpp.svw  .mpc.cpp.svx  .mpc.cpp.svy  .mpc.cpp.svz  .mpc.cpp.swa  .mpc.cpp.swb  .mpc.cpp.swc  .mpc.cpp.swd  .mpc.cpp.swe  .mpc.cpp.swf  .mpc.cpp.swg  .mpc.cpp.swh  .mpc.cpp.swi  .mpc.cpp.swj  .mpc.cpp.swk  .mpc.cpp.swl  .mpc.cpp.swm  .mpc.cpp.swn  .mpc.cpp.swo  .track.cpp.swn  .track.cpp.swo  .track.cpp.swp  Controller_old.cpp  DynamicsCalculator.cpp  NMPCController.cpp  NMPCProblem.cpp  ROSListener.cpp  ROSPublisher.cpp  VelocityTransformer.cpp  dvs_ibvs_nmpc.cpp  et_stab_ibvs_nmpc.cpp  et_track_ibvs_nmpc.cpp  et_tracking_pvs_barycenter_nmpc.cpp  ibvs_nmpc_node.cpp  (+14 more)
src/6_dof_cam_system/: ibvs_img_moments_chaumette_target_tracking.cpp  nmpc_img_moments_target_tracking.cpp  nmpc_img_moments_target_tracking_with_cbf.cpp
src/et_ibvs_nmpc/: et_stab_ibvs_nmpc.cpp  et_track_ibvs_nmpc.cpp  stab_ibvs_nmpc.cpp  track_ibvs_nmpc.cpp
src/et_img_moments_nmpc/: event_triggered_nmpc_img_moments_coast_tracking.cpp  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker.cpp  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker_param_version.cpp  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker_with_bfs.cpp  event_triggered_nmpc_img_moments_coast_tracking_with_bfs.cpp
src/img_moments_nmpc/: ibvs_img_moments_chaumette_coast_tracking.cpp  ibvs_img_moments_coast_tracking.cpp  nmpc_img_moments_coast_tracking.cpp  nmpc_img_moments_coast_tracking_with_cbf.cpp
src/uav_simulator/: event_triggered_nmpc_img_moments_coast_tracking.cpp  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker.cpp  event_triggered_nmpc_img_moments_coast_tracking_OF_tracker_param_version.cpp  ibvs_img_moments_chaumette_coast_tracking.cpp  nmpc_img_moments_coast_tracking.cpp  nmpc_img_moments_coast_tracking_with_cbf.cpp
